# bikestear

./: .gitignore  Makefile  pyproject.toml
ftms2pad/: calibration.py  cli.py  types.py
ftms2pad/ftms/: __init__.py  source.py
ftms2pad/fusion/: __init__.py  pipeline.py
ftms2pad/profiles/: __init__.py  loader.py
ftms2pad/uinput/: __init__.py  gamepad.py
ftms2pad/vision/: __init__.py  tracker.py
profiles/: supertuxkart.yaml
tests/: test_ftms_parser.py
